# passbook

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  passbook-spec.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
crates/passbook-core/: Cargo.toml
crates/passbook-core/src/: attribution.rs  chain.rs  cli.rs  config.rs  erc20.rs  exex.rs  inspector.rs  lib.rs  model.rs  reconcile.rs  reexec.rs  rpc.rs  stack.rs  system.rs
crates/passbook-core/src/ledger/: mod.rs  queries.rs  schema.rs  writer.rs
crates/passbook-core/tests/: exex_integration.rs
crates/passbook-stack-ethereum/: Cargo.toml
crates/passbook-stack-ethereum/src/: lib.rs
crates/passbook-stack-optimism/: Cargo.toml
crates/passbook-stack-optimism/src/: lib.rs  op_chain.rs
crates/spike/: Cargo.toml
crates/spike/src/: main.rs
docs/: reth-pin.md  validation.md
docs/superpowers/plans/: 2026-05-16-passbook-exex.md  2026-05-18-passbook-pipeline-lazy-parent-state.md  2026-05-20-passbook-parent-state-skip.md  2026-05-21-passbook-gap-on-restart.md
docs/superpowers/specs/: 2026-05-20-passbook-parent-state-skip-design.md  2026-05-21-passbook-gap-on-restart-design.md
scripts/: bump-reth.sh  seed-vendor.sh  smoke-dropin.sh
